// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extractNameData > should default to version 1 when no suffix 1`] = `
{
  "name": "test_create_command",
  "version": 1,
}
`;

exports[`extractNameData > should extract snake_case name from PascalCase class name 1`] = `
{
  "name": "test_create_command",
  "version": 1,
}
`;

exports[`extractNameData > should extract version from _V2 suffix 1`] = `
{
  "name": "test_create_command",
  "version": 2,
}
`;

exports[`extractNameData > should extract version from _v3 suffix (lowercase) 1`] = `
{
  "name": "test_create_command",
  "version": 3,
}
`;

exports[`extractNameData > should handle names with numbers in the body 1`] = `
{
  "name": "v3_third_test",
  "version": 1,
}
`;

exports[`extractNameData > should handle single-word names 1`] = `
{
  "name": "command",
  "version": 1,
}
`;
